--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
         "@typescript-eslint/eslint-plugin": "^5.19.0",
         "@typescript-eslint/parser": "^5.19.0",
         "eslint": "^8.13.0",
+        "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-eslint-plugin": "^4.1.0",
+        "eslint-plugin-simple-import-sort": "^7.0.0",
         "husky": "^7.0.4",
         "lint-staged": "^12.3.8",
         "mocha": "^9.2.2",
