--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,5 +1,8 @@
 root: true
 parser: '@typescript-eslint/parser'
+parserOptions:
+    project:
+        - './tsconfig.json'
 plugins:
     - '@typescript-eslint'
     - simple-import-sort
