--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -28,3 +28,14 @@ rules:
     one-var: 0 # Worsens the structure
 
     '@typescript-eslint/no-explicit-any': 0
+    '@typescript-eslint/naming-convention': 0
+    '@typescript-eslint/no-magic-numbers': 0
+    no-inline-comments: 0
+    line-comment-position: 0
+    no-undefined: 0
+    '@typescript-eslint/no-unsafe-call': 0
+    sort-keys: 0
+    '@typescript-eslint/no-unsafe-member-access': 0
+    '@typescript-eslint/prefer-readonly-parameter-types': 0
+    '@typescript-eslint/no-unsafe-assignment': 0
+    '@typescript-eslint/strict-boolean-expressions': 0
