--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -26,6 +26,7 @@ rules:
         - 2
         - default: 'generic'
     one-var: 0 # Worsens the structure
+    sort-imports: 0 # We already use the simple-import-sort plugin
 
     '@typescript-eslint/naming-convention': 0
     '@typescript-eslint/no-explicit-any': 0
@@ -33,7 +34,6 @@ rules:
     '@typescript-eslint/no-unsafe-assignment': 0
     '@typescript-eslint/no-unsafe-call': 0
     '@typescript-eslint/no-unsafe-member-access': 0
-    '@typescript-eslint/prefer-readonly-parameter-types': 0
     '@typescript-eslint/strict-boolean-expressions': 0
     line-comment-position: 0
     no-inline-comments: 0
