--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
         "*": "prettier --ignore-unknown --write",
         "*.(js|jsx|ts|tsx)": "eslint --fix"
     },
-    "dependencies": {},
     "devDependencies": {
         "@types/eslint": "^8.4.1",
         "@types/estree": "^0.0.51",
@@ -41,6 +40,7 @@
         "lint-staged": "^12.3.8",
         "mocha": "^9.2.2",
         "prettier": "2.6.2",
+        "ts-essentials": "^9.1.2",
         "ts-node": "^10.7.0",
         "typescript": "^4.6.3"
     },
