--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -27,9 +27,9 @@ rules:
         - default: 'generic'
     one-var: 0 # Worsens the structure
     sort-imports: 0 # We already use the simple-import-sort plugin
+    '@typescript-eslint/prefer-readonly-parameter-types': 0 # Not always possible
 
     '@typescript-eslint/naming-convention': 0
-    '@typescript-eslint/no-explicit-any': 0
     '@typescript-eslint/no-magic-numbers': 0
     '@typescript-eslint/no-unsafe-assignment': 0
     '@typescript-eslint/no-unsafe-call': 0
