--- a/package.json
+++ b/package.json
@@ -13,17 +13,18 @@
         "dist/**"
     ],
     "scripts": {
-        "build": "tsc",
-        "ts:verify": "tsc --noEmit",
+        "build": "tsc --project tsconfig.build.json",
+        "typescript": "tsc --noEmit",
         "lint": "eslint .",
+        "lint:fix": "yarn lint --fix",
         "test": "mocha -r ts-node/register 'tests/**/*.ts'",
         "prettier": "prettier --write . --ignore-path ./.prettierignore",
         "prepare": "husky install"
     },
     "lint-staged": {
-        "*": "prettier --ignore-unknown --write"
+        "*": "prettier --ignore-unknown --write",
+        "*.(js|jsx|ts|tsx)": "eslint --fix"
     },
-    "dependencies": {},
     "devDependencies": {
         "@types/eslint": "^8.4.1",
         "@types/estree": "^0.0.51",
@@ -32,7 +33,9 @@
         "@typescript-eslint/eslint-plugin": "^5.19.0",
         "@typescript-eslint/parser": "^5.19.0",
         "eslint": "^8.13.0",
+        "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-eslint-plugin": "^4.1.0",
+        "eslint-plugin-simple-import-sort": "^7.0.0",
         "husky": "^7.0.4",
         "lint-staged": "^12.3.8",
         "mocha": "^9.2.2",
