chore: public runner

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
     publish:
-        runs-on: [self-hosted, linux]
+        runs-on: ubuntu-latest
         permissions:
             packages: write
             contents: read
