--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -12,7 +12,7 @@ on:
 jobs:
     yarn_script_validation:
         name: yarn script validation
-        runs-on: [self-hosted, linux]
+        runs-on: ubuntu-latest
         strategy:
             matrix:
                 VALIDATION: [TypeScript, ESLint, Test]
